--- a/views/connection.ejs
+++ b/views/connection.ejs
@@ -1,7 +1,7 @@
 <%- include('standart.ejs') %> 
 <h1>CONNECTION</h1>
 
-    <form id="form-connection" action="/connection" method="post"  autocomplete="off">
+    <form id="form-connection" action="/connection" method="post" >
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email</label>
           <input type="email" class="form-control" id="exampleInputEmail1" name="email" >
