--- a/views/inscription.ejs
+++ b/views/inscription.ejs
@@ -14,7 +14,7 @@
         <input type="password" class="form-control" id="exampleInputPassword1" name="password" autocomplete="off">
       </div>
       <button type="submit" class="btn btn-primary" id="btn" >Inscription</button>
-      <a href="/connection">Connexion</a>
+      <a href="/connexion">Connexion</a>
       <!-- <button id="btn-connexion"></button> -->
   </form>
 
